# Embedded-COTOutf8

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: f32_to_str.rs  f64_to_str.rs  i16_to_str.rs  i32_to_str.rs  i8_to_str.rs  u8_to_str.rs  u8or16_to_hex.rs
src/: floato.rs  gui.rs  lib.rs  main.rs
