[package]
name = "embedded_cotoutf8"
version = "0.1.1"
edition = "2021"
authors = ["Anurag"]
description = "COTO is a library that translates numerical primitives into readable ASCII UTF-8 arrays"
repository = "https://github.com/unknownK19/Embedded-COTOutf8.git"
categories = ["embedded", "UTF-8"]
license = "MIT"
license-file = "LICENSE"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[examples]]
path = "examples"
