[package]
name = "embedded_cotoutf8"
version = "0.1.4"
edition = "2021"
authors = ["Anurag"]
description = "COTO is a library that translates numerical primitives into readable ASCII UTF-8 arrays"
repository = "https://github.com/unknownK19/Embedded-COTOutf8.git"
categories = ["embedded"]
keywords = ["no_std", "utf8", "str", "f32"]
license = "MIT"
license-file = "LICENSE"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
floato = []
